fix tags layout bug

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -11,7 +11,7 @@ body {
     text-decoration: none;
   }
   -webkit-font-smoothing: antialiased;
-  font-family: "Blanco";
+  font-family: "TWK Lausanne";
   text-rendering: optimizeLegibility;
   overscroll-behavior: none;
   scroll-behavior: smooth;
